NEON-595 fixed tooltip text color so it is visible

--- a/charts/src/main/webapp/css/barchart.css
+++ b/charts/src/main/webapp/css/barchart.css
@@ -56,5 +56,6 @@
     font-family: sans-serif;
     text-align: center;
     pointer-events: none;
+    color: black;
 }
 
