--- a/charts/src/main/webapp/css/timelinewidget.css
+++ b/charts/src/main/webapp/css/timelinewidget.css
@@ -32,7 +32,7 @@
 
 .dropdown {
     background-color: silver;
-    color; black;
+    color: black;
 }
 
 html, body {
